# 1bitjam

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  build.sh  build_device.sh  build_sim.sh  entrypoint.sh
1bitjam.pdx/: pdxinfo
Source/: pdex.elf  submarine.mtl
include/: Camera.h  Camera.hpp  FragmentShaders.h  ModelFileLoader.h  ModelFileLoader.hpp  PointLight.hpp  Rasterizers.h  SBufferRenderer.h  SceneObject.h  SceneObject.hpp  ScreenGlobals.h  ScreenGlobals.hpp  SimpleVertexData_impl.hpp  VertexShaders.h  WFObjLoader.h  WFObjLoader.hpp  utils.h  utils.hpp
src/: Camera.c  Camera.cpp  SBufferRenderer.c  SceneObject.c  SceneObject.cpp  WFObjLoader.c  WFObjLoader.cpp  main.c  main.cpp  utils.c  utils.cpp  vector.c
